src/objects/Review__c.object
<CustomObject>
    <description>Junction object between the account and Question</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SMI_Reviews1_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Provider__c</fullName>
        <label>Feedback Provider</label>
        <referenceTo>Feedback_Providers__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>SMI_Reviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>Question__r.Question__c</formula>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>SMI_Supplier_Reviews1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Review #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>